// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoiceInput snapshots checkbox renders 1`] = `
<div
  className="corespring-checkbox"
>
  <div>
    <WithStyles(FeedbackTick)
      correctness="correct"
    />
    <div>
      <WithStyles(Component)
        control={
          <WithStyles(Component)
            checked={false}
            correctness="correct"
            onChange={[Function]}
          />
        }
        disabled={false}
        label="1. "
      />
      <span
        className="label"
        dangerouslySetInnerHTML={
          Object {
            "__html": "label",
          }
        }
        onClick={[Function]}
      />
    </div>
  </div>
  <Component
    correctness="correct"
  />
</div>
`;

exports[`ChoiceInput snapshots radio renders 1`] = `
<div
  className="corespring-radio-button"
>
  <div>
    <WithStyles(FeedbackTick)
      correctness="correct"
    />
    <div>
      <WithStyles(Component)
        control={
          <WithStyles(Component)
            checked={false}
            correctness="correct"
            onChange={[Function]}
          />
        }
        disabled={false}
        label="1. "
      />
      <span
        className="label"
        dangerouslySetInnerHTML={
          Object {
            "__html": "label",
          }
        }
        onClick={[Function]}
      />
    </div>
  </div>
  <Component
    correctness="correct"
  />
</div>
`;

exports[`ChoiceInput snapshots radio with incorrect renders 1`] = `
<div
  className="corespring-radio-button"
>
  <div>
    <WithStyles(FeedbackTick)
      correctness="incorrect"
    />
    <div>
      <WithStyles(Component)
        control={
          <WithStyles(Component)
            checked={false}
            correctness="incorrect"
            onChange={[Function]}
          />
        }
        disabled={false}
        label="1. "
      />
      <span
        className="label"
        dangerouslySetInnerHTML={
          Object {
            "__html": "label",
          }
        }
        onClick={[Function]}
      />
    </div>
  </div>
  <Component
    correctness="incorrect"
  />
</div>
`;
